--- a/GD7 Game Production/Assembly-CSharp.csproj
+++ b/GD7 Game Production/Assembly-CSharp.csproj
@@ -57,10 +57,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Inheritables\IInteractible.cs" />
+    <Compile Include="Assets\Scripts\Inheritables\IItem.cs" />
+    <Compile Include="Assets\Scripts\Player\Properties\PlayerInventory.cs" />
+    <Compile Include="Assets\Scripts\Player\Properties\PlayerStatus.cs" />
     <Compile Include="Assets\Scripts\Main Menu\SceneLoader.cs" />
-    <Compile Include="Assets\Scripts\Controls\PlayerMovement.cs" />
-    <Compile Include="Assets\Scripts\Controls\PlayerInteractor.cs" />
+    <Compile Include="Assets\Scripts\Player\Controls\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Interactibles\IInteractibleHide.cs" />
+    <Compile Include="Assets\Scripts\Player\Controls\PlayerInteractor.cs" />
+    <Compile Include="Assets\Scripts\UI\InventoryItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
