--- a/GD7 Game Production/Assembly-CSharp.csproj
+++ b/GD7 Game Production/Assembly-CSharp.csproj
@@ -73,14 +73,15 @@
     <Compile Include="Assets\Scripts\Chest_Puzzle\InteractibleFrame.cs" />
     <Compile Include="Assets\Scripts\Interactibles\BasicKey.cs" />
     <Compile Include="Assets\Scripts\Player\Properties\PlayerStatus.cs" />
-    <Compile Include="Assets\Scripts\Drawer_Mechanism\OpenCloseDrawers.cs" />
+    <Compile Include="Assets\Scripts\Drawer_Mechanism\DrawerMechanism.cs" />
     <Compile Include="Assets\Scripts\Main Menu\SceneLoader.cs" />
-    <Compile Include="Assets\Scripts\Interactibles\BasicItemRemove.cs" />
+    <Compile Include="Assets\Scripts\Interactibles\SingleUseItem.cs" />
     <Compile Include="Assets\Scripts\Player\Controls\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Interactibles\HidingSpot.cs" />
     <Compile Include="Assets\Scripts\Combination_Puzzle\For Testing\PictureFrameController.cs" />
     <Compile Include="Assets\Scripts\Chest_Puzzle\BasicItemRemove.cs" />
     <Compile Include="Assets\Scripts\Player\Controls\PlayerInteractor.cs" />
+    <Compile Include="Assets\drawerJumpscare.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
