--- a/GD7 Game Production/Assembly-CSharp.csproj
+++ b/GD7 Game Production/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
      <Compile Include="Assets\Scripts\Chest_Puzzle\InteractibleBasicItem.cs" />
      <Compile Include="Assets\Scripts\Inheritables\IItem.cs" />
      <Compile Include="Assets\Scripts\UI\InventoryItem.cs" />
+     <Compile Include="Assets\Scripts\Reveals\InteractDrop.cs" />
      <Compile Include="Assets\Scripts\Chest_Puzzle\UnlockableObject.cs" />
      <Compile Include="Assets\Scripts\Items\BaseItem.cs" />
      <Compile Include="Assets\Scripts\Player\Properties\PlayerInventory.cs" />
