--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 /GD7 Game Production/Library
+GD7 Game Production/Assembly-CSharp.csproj
+GD7 Game Production/Library/ArtifactDB-lock
+GD7 Game Production/Library/ArtifactDB-lock
+GD7 Game Production/Library/SourceAssetDB
