--- a/GD7 Game Production/Assembly-CSharp.csproj
+++ b/GD7 Game Production/Assembly-CSharp.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Assets\Scripts\Drawer_Mechanism\OpenCloseDrawers.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_UiFrameRateCounter.cs" />
+    <Compile Include="Assets\Scripts\UI\InteractionText.cs" />
     <Compile Include="Assets\Scripts\Main Menu\SceneLoader.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\Drawer_Mechanism\DrawerMechanism.cs" />
@@ -116,7 +117,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
-    <Compile Include="Assets\Scripts\UI\InteractionText.cs" />
+    <Compile Include="Assets\Scripts\spawner\frameSpawner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
