--- a/GD7 Game Production/Assembly-CSharp.csproj
+++ b/GD7 Game Production/Assembly-CSharp.csproj
@@ -95,7 +95,7 @@
     <Compile Include="Assets\Scripts\Camera\CameraSettings.cs" />
     <Compile Include="Assets\Scripts\Player\Properties\PlayerStatus.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeB.cs" />
-    <Compile Include="Assets\Scripts\spawner\cameraCondition.cs" />
+    <Compile Include="Assets\Scripts\spawner\CameraCondition.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
     <Compile Include="Assets\Scripts\Drawer_Mechanism\OpenCloseDrawers.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\EnvMapAnimator.cs" />
@@ -125,6 +125,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\Scripts\EnemyScripts\scaryEventTrigger.cs" />
     <Compile Include="Assets\Scripts\Enemy\enemyAI.cs" />
+    <Compile Include="Assets\Scripts\Player\Controls\SC_FPSController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
